--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
     "prisma": "3.3.0",
+    "prisma-merge": "^0.2.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
